Ajout de CV.html et Certifications.html et mise à jour du portefolio

--- a/Portefolio.html
+++ b/Portefolio.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-<html >
+<html>
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="Style_Portefolio.css">
+  <title>Portfolio Marc Bouvot</title>
+  <link rel="stylesheet" href="Style.css">
 
 </head>
 
 <body>
 
+<header>
+  <nav>
+    <ul>
+      <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
+      <li> <a href="Certificattions.html">Mes Certifications</a> </li>
+      <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
+    </ul>
+  </nav>
+</header>
+
+<h1>Quelques informations sur moi :</h1>
+<p>Je m'appelle Marc Bouvot, je suis né le 22 août 2007 et j'habite au 11 Rue d'archamp 25640 à Pouligney. 
+<br> Je suis étudiant au Lycée Louis Pergaud à Besançon, oû je vise à obtenir mon Brevet de Technicien Supérieur Service Informatique aux Organisations.
+<br>Je souhaite prendre le parcours Solutions d'Infrastructure, Système et Réseaux à compter du deuxième semestre.</p>
 
 
 </body>
+
+<footer>
+  <p>© Portfolio Marc Bouvot -- Tous droits réservés</p>
+</footer>
+
 </html>
