ajout de projets, eveille info, exp pro

--- a/Certificattions.html
+++ b/Certificattions.html
@@ -9,15 +9,47 @@
 
 <body>
 
+<header>
+  <nav>
+    <ul>
+      <li> <a href="Portefolio.html">Mon Portefolio</a> </li>
+      <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
+      <li> <a id = "haut de page" href="Certificattions.html">Mes Certifications</a> </li>
+      <li> <a href="Projets.html">Mes Projets</a> </li>
+      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
+      <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
+      <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
+    </ul>
+  </nav>
+</header>
+
 <h1>Certificats :</h1>
-<p> <a href = "Attestation MOOC ANSSI.pdf" target = "_blank"> <strong>MOOC de l'ANSSI : </strong></a> <br> J'ai obtenus cette année mon attestation du Massive Open Online Course (cours en ligne ouvert et massifs) de l'Agence Nationale de la Sécurité des Systèmes d'Information.
-<br> <br> <a href = "https://atelier-rgpd.cnil.fr/mod/customcert/view.php?id=182&downloadown=1" target = "_blank"> <strong>MOOC de la CNIL : </strong></a>
+<br>
+
+<p> <img src = "Illustrations/Illustration ANSSI.jpg" title = "Illustration du MOOC de l'ANSSI'" alt = "Photo d'illustration de l'ANSSI" height = "200" width = "300"><br>
+
+  <br><a href = "Certifications/Attestation MOOC ANSSI.pdf" target = "_blank"> <strong>MOOC de l'ANSSI : </strong></a>
+<br> J'ai obtenus cette année mon attestation du Massive Open Online Course (cours en ligne ouvert et massifs) de l'Agence Nationale de la Sécurité des Systèmes d'Information.
+<br> <br>
+
+
+<br> <br> <img src = "Illustrations/Illustration CNIL.jpg" title = "Illustration du MOOC de la CNIL" alt = "Photo d'illustration de la CNIL" height = "200" width = "300"><br>
+
+<br><a href = "Certifications/Attestation MOOC CNIL.pdf" target = "_blank"> <strong>MOOC de la CNIL : </strong></a>
 <br> J'ai participé à l'atelier du Règlement Général sur la Protection des Données et obtenus mon certificat du Massive Open Online Course (cours en ligne ouvert et massifs) de la Commission Nationale de l'Informatique et des Libertés.
+<br> <br>
 
+
+<br> <br> <img src = "Illustrations/Illustration PIX.jpg" title = "Illustration de PIX" alt = "Photo d'illustration de PIX"><br>
+
+<br> <a href = "Certifications/Certification PIX Lycee.pdf" target = "_blank"> <strong>Certification PIX (niveau Lycée) : </strong></a>
+<br> J'ai obtenus ma certification PIX au lycée Louis Pergaud à Besançon avec un score de 447. Je l'ai obtenus lors de ma terminale.
+
+<br> <br> <a href = "Certifications/Certification PIX College.pdf" target = "_blank"> <strong>Certification PIX (niveau Collège) : </strong></a>
+<br> J'ai obtenus ma certification PIX au collège Aigremont à Roulans avec un score de 258. Je l'ai obtenus lors de ma troisième.
 </p>
-</body>
 
-<a class = "retour" href="Portefolio.html">Retourner au Portefolio</a>
+<a class = "retour" href = "#haut de page">Retourner en haut de la page</a>
 
 </body>
 
