--- a/Portefolio.html
+++ b/Portefolio.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <title>Portfolio Marc Bouvot</title>
   <link rel="stylesheet" href="Style.css">
-
 </head>
 
 <body>
@@ -13,8 +12,12 @@
 <header>
   <nav>
     <ul>
+      <li> <a id = "haut de page" href="Portefolio.html">Mon Portefolio</a> </li>
       <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
       <li> <a href="Certificattions.html">Mes Certifications</a> </li>
+      <li> <a href="Projets.html">Mes Projets</a> </li>
+      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
+      <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
       <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
     </ul>
   </nav>
@@ -25,7 +28,7 @@
 <br> Je suis étudiant au Lycée Louis Pergaud à Besançon, oû je vise à obtenir mon Brevet de Technicien Supérieur Service Informatique aux Organisations.
 <br>Je souhaite prendre le parcours Solutions d'Infrastructure, Système et Réseaux à compter du deuxième semestre.</p>
 
-
+<a class = "retour" href = "#haut de page">Retourner en haut de la page</a>
 </body>
 
 <footer>
