--- a/CV.html
+++ b/CV.html
@@ -10,6 +10,21 @@
 </head>
 
 <body>
+
+<header>
+  <nav>
+    <ul>
+      <li> <a href="Portefolio.html">Mon Portefolio</a> </li>
+      <li> <a id = "haut de page" href="CV.html">Mon Curriculum Vitae</a> </li>
+      <li> <a href="Certificattions.html">Mes Certifications</a> </li>
+      <li> <a href="Projets.html">Mes Projets</a> </li>
+      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
+      <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
+      <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
+    </ul>
+  </nav>
+</header>
+
 <h1>Curriculum Vitae</h1>
 <img src="photo.jpg" title = "Marc Bouvot" alt="Photo de Marc Bouvot" width="250" height="250">
 <h2>Informations personnelles :</h2>
@@ -80,7 +95,7 @@ Utilisations de langage de programmation : Python, PHP    ●●●○○
   <li>Voyages</li>
 </ul>
 
-<a class = "retour" href="Portefolio.html">Retourner au Portefolio</a>
+<a class = "retour" href = "#haut de page">Retourner en haut de la page</a>
 </body>
 
 <footer>
