Ajout des artistes

--- a/CV.html
+++ b/CV.html
@@ -65,18 +65,23 @@
 <h2>Compétences :</h2>
 
 <p>
-Utilisations de langage de programmation : Python, PHP    ●●●○○
-<br> Utilisations de base de données (SQL, NoSQL)         ●●●●○
-<br> Travail en équipe                                    ●●●●●
+<ul>
+  <li>Utilisations de langage de programmation : Python, PHP ●●●○○</li>
+  <li>Utilisations de base de données (SQL, NoSQL) ●●●●○</li>
+  <li>Travail en équipe ●●●●●</li>
+</ul>
 </p>
 
 <h2>Qualités :</h2>
 <p>Je suis une personne rigoureuse, capable de travailler de manière autonome tout en étant un bon communicant au sein d'une équipe. Je sais également gerer mon stress dans des situations d'urgence.</p>
 
 <h2>Langues :</h2>
-<p>Français : Langue maternelle
-<br>Anglais : Niveau intermédiaire (B1)
-<br>Espagnol : Niveau débutant (A2)
+<p></p>
+<ol>
+  <li> <strong>Français</strong> : Langue maternelle</li>
+  <li> <strong>Anglais </strong> : Niveau intermédiaire (B1)</li>
+  <li> <strong>Espagnol</strong> : Niveau débutant (A2)</li>
+</ol>
 </p>
 
 <h2>Activités extra-scolaires :</h2>
