--- a/Certificattions.html
+++ b/Certificattions.html
@@ -23,7 +23,7 @@
   </nav>
 </header>
 
-<h1>Certificats :</h1>
+<h1>Certificats</h1>
 <br>
 
 <p> <img src = "Illustrations/Illustration ANSSI.jpg" title = "Illustration du MOOC de l'ANSSI'" alt = "Photo d'illustration de l'ANSSI" height = "200" width = "300"><br>
