--- a/Portefolio.html
+++ b/Portefolio.html
@@ -23,10 +23,37 @@
   </nav>
 </header>
 
-<h1>Quelques informations sur moi :</h1>
+<h1>Portefolio</h1>
+
+<h2>Présentation personnel :</h2>
 <p>Je m'appelle Marc Bouvot, je suis né le 22 août 2007 et j'habite au 11 Rue d'archamp 25640 à Pouligney. 
 <br> Je suis étudiant au Lycée Louis Pergaud à Besançon, oû je vise à obtenir mon Brevet de Technicien Supérieur Service Informatique aux Organisations.
 <br>Je souhaite prendre le parcours Solutions d'Infrastructure, Système et Réseaux à compter du deuxième semestre.</p>
+
+
+<h2>Mes passions : </h2>
+
+<p>Je suis passionné par plusieurs activités. J'aime le sport, notamment la course à pied et la musculation. 
+<br>Ces activités sont un loisirs mais je suis égalmment contraint de les pratiqué pour mon parcours professionnel.
+<br>J'aime également la musique, j'en écoute beaucoup. J'affectionne particulièrement le rap américain, le métal et le rock. 
+<br>Voici une liste de mes artistes et albums favoris :
+<ol>
+  <li> <a href = "Artistes/A$AP Rocky.jpg" target = "_blank"> <strong>A$AP Rocky</strong></a> : Long Live A$AP</li>
+  <li> <a href = "Artistes/Ken Carson.jpg" target = "_blank"> <strong>Ken Carson</strong></a> : A Great Chaos</li>
+  <li> <a href = "Artistes/Metro Boomin.jpg" target = "_blank"> <strong>Metro Boomin</strong></a> : Heroes & Villains</li>
+  <li> <a href = "Artistes/Mobb Deep.jpg" target = "_blank"> <strong>Mobb Deep</strong></a> : The Infamous</li>
+  <li> <a href = "Artistes/Kendrick Lamar.jpg" target = "_blank"> <strong>Kendrick Lamar</strong></a> : GNX</li>
+  <li> <a href = "Artistes/Rammstein.jpeg" target = "_blank"> <strong>Rammstein</strong></a> : GNX</li>
+  <li> <a href = "Artistes/Playboi Carti.jpg" target = "_blank"> <strong>Playboi Carti</strong></a> : In Abundance</li>
+  <li> <a href = "Artistes/Denzel Curry.jpg" target = "_blank"> <strong>Denzel Curry</strong></a> : In Abundance</li>
+  <li> <a href = "Artistes/Nas.jpg" target = "_blank"> <strong>Nas</strong></a> : King's Disease II</li>
+  <li> <a href = "Artistes/Eminem.jpg" target = "_blank"> <strong>Eminem</strong></a> : Kamikaze</li>
+  <li> <a href = "Artistes/21 Savage.jpg" target = "_blank"> <strong>21 Savage</strong></a> : Without Warning</li>
+  <li> <a href = "Artistes/Futur.jpg" target = "_blank"> <strong>Futur</strong></a> : We don't trust you (Red Smoke)</li>
+  <li> <a href = "Artistes/Kanye West.jpg" target = "_blank"> <strong>Kanye West</strong></a> : Graduation</li>
+  <li> <a href = "Artistes/Nav.jpg" target = "_blank"> <strong>Nav</strong></a> : Perfect Timing</li>
+  <li> <a href = "Artistes/AC DC.jpg" target = "_blank"> <strong>AC DC</strong></a> : Highway to Hell (single)</li>
+</ol></p>
 
 <a class = "retour" href = "#haut de page">Retourner en haut de la page</a>
 </body>
