--- a/Projets.html
+++ b/Projets.html
@@ -25,7 +25,7 @@
 </header>
 
 
-<h1>Mes Projets :</h1>
+<h1>Mes Projets</h1>
 <ol>
   <li><h2>Mon portefolio :</h2>
   <p>Mon Portefolio est mon premier projet conséquent en ce qui concerne l'utilisation de HTML et CSS. Celui-ci m'a permis d'apprendre les fondamentaux de ces langages. J'ai réalisé ce projet à partir de ma première année de BTS SIO. Dedans, on retrouve toutes les informations essentielles sur moi : </p>
@@ -40,8 +40,8 @@
   </ul>
   </li>
 
-  <li><h2>Projet MasterMind :</h2>
-  <p>J'ai réaliser, en collaboration, un projet en PHP qui avait pour objectif de créer un MasterMind jouable dans une console d'éxécution. Ce projet a été donné en classe avec un délai de quatre heures. Celui-ci à pus être terminer an avanace grâce à une bonne collaboration. Ce programme permet de :</p>
+  <li><h2>Projet Master Mind :</h2>
+  <p>J'ai réaliser, en collaboration, un projet en PHP qui avait pour objectif de créer un Master Mind jouable dans une console d'éxécution. Ce projet a été donné en classe avec un délai de quatre heures. Celui-ci à pus être terminer an avanace grâce à une bonne collaboration. Ce programme permet de :</p>
   <ul>
     <li>De jouer au MasterMind pendant maximum 12 tours;</li>
     <li>D'afficher si l'utilisateur a gagné ou perdu;</li>
