Description exp pro

--- a/Experience_professionnelles.html
+++ b/Experience_professionnelles.html
@@ -25,6 +25,32 @@
 </header>
 <h1>Expériences professionnelles</h1>
 
+<h2>Sapeur-pompier volontaire :</h2>
+
+<p>
+Depuis le premier octobre 2023, je suis sapeur-pompier volontaire au sein du Centre d'Incendie et de Secours de Baume-les-Dames. 
+<br>Je me suis engagé après avoir effectué quatre années en tant que Jeune Sapeur Pompier au sein du même centre. 
+<br>Je suis également correspondant informatique pour plusieurs casernes (Baume-les-Dames, Rougemont, Moncey, Marchaux, Bouclans). 
+<br>De ce fait, j'assure les dépannages informatiques ainsi que la transmissions des informations du service informatique à l'ensemble des personnels des casernes.
+<br>Cette expérience m'a permis de développer des compétences essentielles telles que le travail en équipe, la gestion du stress et la prise de décision rapide dans des situations d'urgence. 
+<br>Je souhaite, dans l'avenir, effectué les test de recrutement afin de devenir marin pompier à Marseille. 
+<br>Ce qui me motive dans ce projet est l'envie de rejoindre un corps d'armée tout en étant au service de la population. Néanmoins, je suis conscient qu'il faut pour celà se dépasser physiquement et mentalement.
+</p>
+
+<br>
+
+<h2>Conseiller Départemental Junior :</h2>
+
+<p>
+Au cours de mes années de collège (de ma quatrième à ma troisième), j'ai eu l'opportunité de représenter les élèves de mon établissement au Conseil Départemental du Doubs.
+<br>En tant que Conseiller Départemental Junior, j'ai participé à diverses réunions et activités visant à promouvoir les relations entre la jeunesse et notre département.
+<br>Pendant mon mandat de deux ans, j'ai participé à la réalisation de podcast sur le harcélement et le cyberharcélement. Ce podcat est en collaboration avec Radio Campus Besançon.
+<br>Celui-ci a été réalisé avec 12 conseillers départemental juniors (dont moi) ainsi qu'avec notre référente du Conseil Départemental du Doubs.
+<br>Ce podcast s'intitule "Apprendre à souffrir" et est réparti sur 5 épisodes de 10 minutes environ.
+<br>Cette expérience m'a permis de développer des compétences en communication, en organisation et en travail d'équipe, tout en renforçant mon engagement civique.
+</p>
+
+
 <a class = "retour" href = "#haut de page">Retourner en haut de la page</a>
 
 </body>
