Mise à jour des classes CSS pour le CV et les certificats, ajout de styles spécifiques pour les images

--- a/CV.html
+++ b/CV.html
@@ -26,9 +26,9 @@
 </header>
 
 <h1>Curriculum Vitae</h1>
-<img class = "Limitation" src="photo.jpg" title = "Marc Bouvot" alt="Photo de Marc Bouvot" width="250" height="250">
+<img class = "Limitation1" src="photo.jpg" title = "Marc Bouvot" alt="Photo de Marc Bouvot" width="250" height="250">
 
-<h2 class = "Limitation">Informations personnelles :</h2>
+<h2 class = "Limitation1">Informations personnelles :</h2>
 <p>
 <br>Bouvot Marc
 <br>Né le 22 août 2007
@@ -42,14 +42,14 @@
 
 <br>
 
-<h2 class = "Limitation">Profile :</h2>
+<h2 class = "Limitation1">Profile :</h2>
 <p>
 <br>Étudiant passionné par l'informatique, je suis à la recherche d'un stage en informatique pour mettre en pratique mes connaissances en programmation, développement WEB et administration système. Rigoureux et curieux, je souhaite contribuer activement aux projets innovants.
 </p>
 
 <br>
 
-<h2 class = "Limitation">Formation :</h2>
+<h2 class = "Limitation1">Formation :</h2>
 <ul>
   <li>2025 - Présent : Brevet de Technicien Supérieur Services Informatiques aux Organisations au Lycée Louis Pergaud, Besançon</li>
   <li>2022 - 2025 : Baccalauréat général mention Bien avec les spécialités Mathématiques et Numérique, Sciences Informatiques au Lycée Louis Pergaud, Besançon</li>
@@ -59,13 +59,18 @@
 
 <br>
 
-<h2 class = "Limitation">Expériences professionnelles :</h2>
+<h2 class = "Limitation1">Expériences professionnelles :</h2>
 <p>
 <br>Je suis sapeur-pompier volontaire dans le Service Départemental d'Incendie et de Secours du Doubs depuis maintenant deux ans. Je suis également correspondant informatique au sein de plusieurs casernes.</p>
 
 <br>
 
-<h2 class = "Limitation">Cours :</h2>
+<h2 class = "Limitation1">Expériences professionnelles :</h2>
+<p>
+<br>Je suis sapeur-pompier volontaire dans le Service Départemental d'Incendie et de Secours du Doubs depuis maintenant deux ans. Je suis également correspondant informatique au sein de plusieurs casernes.</p>
+
+<br>
+<h2 class = "Limitation1">Cours :</h2>
 <ul>
   <li> <strong>Latin :</strong> J'ai suivis des cours de latin depuis ma cinquième jusqu'à ma seconde. J'ai pus découvrir l'histoire Antique et la traduction de langue mort tel que le Latin et le Grec ancien.</li>
   <li> <strong>Atelier astronomie :</strong> Durant toutes mes années de collège, j'ai pus participer a l'atelier astronomie qui avait pour objectif de nous faire découvrir le fonctionnement de l'univers de manière ludique.</li>
@@ -74,7 +79,7 @@
 
 <br>
 
-<h2 class = "Limitation">Compétences :</h2>
+<h2 class = "Limitation1">Compétences :</h2>
 <ul>
   <li>Utilisations de langage de programmation : Python, PHP ●●●○○</li>
   <li>Utilisations de base de données (SQL, NoSQL) ●●●●○</li>
@@ -83,13 +88,18 @@
 
 <br>
 
-<h2 class = "Limitation">Qualités :</h2>
+<h2 class = "Limitation1">Qualités :</h2>
 <p>
 <br>Je suis une personne rigoureuse, capable de travailler de manière autonome tout en étant un bon communicant au sein d'une équipe. Je sais également gerer mon stress dans des situations d'urgence.</p>
 
 <br>
 
-<h2 class = "Limitation">Langues :</h2>
+<h2 class = "Limitation1">Qualités :</h2>
+<p>
+<br>Je suis une personne rigoureuse, capable de travailler de manière autonome tout en étant un bon communicant au sein d'une équipe. Je sais également gerer mon stress dans des situations d'urgence.</p>
+
+<br>
+<h2 class = "Limitation1">Langues :</h2>
 <ol>
   <li> <strong>Français</strong> : Langue maternelle</li>
   <li> <strong>Anglais </strong> : Niveau intermédiaire (B1)</li>
@@ -98,7 +108,7 @@
 
 <br>
 
-<h2 class = "Limitation">Activités extra-scolaires :</h2>
+<h2 class = "Limitation1">Activités extra-scolaires :</h2>
 <ul>
   <li> <strong>Tuteur à l'AFEV :</strong> <br>Pendant 6 mois, j'ai eu la chance d'être tuteur à l'Association de la Fondation Étudiante pour la Ville. Durant ces 6 mois j'ai accompagner un élève de troisième afin de l'aider à s'integrer au Lycée Louis Pergaud.</li>
   <li> <strong>Conseillé Départemental Junior :</strong> <br>J'ai été Conseillé Départemental Junior pendant un mandat de deux ans. Durant ce mandat, j'ai pus participé à des actions de lutte contre le harcèlement et le cyber-harcèlement dont notamment la réalisation d'un podcast en collaboration avec Radio Campus Besançon.</li>
@@ -106,13 +116,13 @@
 
 <br>
 
-<h2 class = "Limitation">Stage :</h2>
+<h2 class = "Limitation1">Stage :</h2>
 <p>
 <br>Pendant mon stage de découverte en troisième, j'ai découvert le métier de sapeur-pompier professionnel au Centre d'Incendie et de Secours de Besançon Est. J'ai pus participer aux manoeuvres, séances de sport, travaux d'intérêts généraux et tout autre tâche qui incombe un sapeur-pompier.</p>
 
 <br>
 
-<h2 class = "Limitation">Centres d'intérêt :</h2>
+<h2 class = "Limitation1">Centres d'intérêt :</h2>
 <ul>
   <li>Sport</li>
   <li>Jeux vidéo</li>
