--- a/Certificattions.html
+++ b/Certificattions.html
@@ -26,7 +26,7 @@
 <h1>Certificats</h1>
 <br>
 
-<p> <img src = "Illustrations/Illustration ANSSI.jpg" title = "Illustration du MOOC de l'ANSSI'" alt = "Photo d'illustration de l'ANSSI" height = "200" width = "300"><br>
+<p> <img class = "Limitation2" src = "Illustrations/Illustration ANSSI.jpg" title = "Illustration du MOOC de l'ANSSI'" alt = "Photo d'illustration de l'ANSSI" height = "200" width = "300"><br>
 
 <br>
 <a href = "Certifications/Attestation MOOC ANSSI.pdf" target = "_blank"><strong>MOOC de l'ANSSI : </strong></a>
@@ -34,7 +34,7 @@
 <br> <br>
 
 
-<br> <br> <img src = "Illustrations/Illustration CNIL.jpg" title = "Illustration du MOOC de la CNIL" alt = "Photo d'illustration de la CNIL" height = "200" width = "300"><br>
+<br> <br> <img class = "Limitation2" src = "Illustrations/Illustration CNIL.jpg" title = "Illustration du MOOC de la CNIL" alt = "Photo d'illustration de la CNIL" height = "200" width = "300"><br>
 <br><strong>MOOC de la CNIL : </strong>
 <br> J'ai participé à l'atelier du Règlement Général sur la Protection des Données et obtenus mon certificat du Massive Open Online Course (cours en ligne ouvert et massifs) de la Commission Nationale de l'Informatique et des Libertés.
 
@@ -50,7 +50,7 @@
 <br> <br>
 
 
-<br> <br> <img src = "Illustrations/Illustration PIX.jpg" title = "Illustration de PIX" alt = "Photo d'illustration de PIX"><br>
+<br> <br> <img class = "Limitation2" src = "Illustrations/Illustration PIX.jpg" title = "Illustration de PIX" alt = "Photo d'illustration de PIX"><br>
 
 <br> <a href = "Certifications/Certification PIX Lycee.pdf" target = "_blank"> <strong>Certification PIX (niveau Lycée) : </strong></a>
 <br> J'ai obtenus ma certification PIX au lycée Louis Pergaud à Besançon avec un score de 447. Je l'ai obtenus lors de ma terminale.
