Ajout de la classe CSS "sur_cette_page" pour améliorer la navigation et mise à jour des textes descriptifs dans plusieurs sections

--- a/CV.html
+++ b/CV.html
@@ -15,7 +15,7 @@
   <nav>
     <ul>
       <li> <a href="Portefolio.html">Mon Portefolio</a> </li>
-      <li> <a id = "haut de page" href="CV.html">Mon Curriculum Vitae</a> </li>
+      <li> <a id = "haut de page" class = "sur_cette_page" href="CV.html">Mon Curriculum Vitae</a> </li>
       <li> <a href="Certificattions.html">Mes Certifications</a> </li>
       <li> <a href="Projets.html">Mes Projets</a> </li>
       <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
@@ -64,12 +64,6 @@
 <br>Je suis sapeur-pompier volontaire dans le Service Départemental d'Incendie et de Secours du Doubs depuis maintenant deux ans. Je suis également correspondant informatique au sein de plusieurs casernes.</p>
 
 <br>
-
-<h2 class = "Limitation1">Expériences professionnelles :</h2>
-<p>
-<br>Je suis sapeur-pompier volontaire dans le Service Départemental d'Incendie et de Secours du Doubs depuis maintenant deux ans. Je suis également correspondant informatique au sein de plusieurs casernes.</p>
-
-<br>
 <h2 class = "Limitation1">Cours :</h2>
 <ul>
   <li> <strong>Latin :</strong> J'ai suivis des cours de latin depuis ma cinquième jusqu'à ma seconde. J'ai pus découvrir l'histoire Antique et la traduction de langue mort tel que le Latin et le Grec ancien.</li>
@@ -94,11 +88,6 @@
 
 <br>
 
-<h2 class = "Limitation1">Qualités :</h2>
-<p>
-<br>Je suis une personne rigoureuse, capable de travailler de manière autonome tout en étant un bon communicant au sein d'une équipe. Je sais également gerer mon stress dans des situations d'urgence.</p>
-
-<br>
 <h2 class = "Limitation1">Langues :</h2>
 <ol>
   <li> <strong>Français</strong> : Langue maternelle</li>
@@ -111,6 +100,7 @@
 <h2 class = "Limitation1">Activités extra-scolaires :</h2>
 <ul>
   <li> <strong>Tuteur à l'AFEV :</strong> <br>Pendant 6 mois, j'ai eu la chance d'être tuteur à l'Association de la Fondation Étudiante pour la Ville. Durant ces 6 mois j'ai accompagner un élève de troisième afin de l'aider à s'integrer au Lycée Louis Pergaud.</li>
+  <br>
   <li> <strong>Conseillé Départemental Junior :</strong> <br>J'ai été Conseillé Départemental Junior pendant un mandat de deux ans. Durant ce mandat, j'ai pus participé à des actions de lutte contre le harcèlement et le cyber-harcèlement dont notamment la réalisation d'un podcast en collaboration avec Radio Campus Besançon.</li>
 </ul>
 
