--- a/Certificattions.html
+++ b/Certificattions.html
@@ -14,7 +14,7 @@
     <ul>
       <li> <a href="Portefolio.html">Mon Portefolio</a> </li>
       <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
-      <li> <a id = "haut de page" href="Certificattions.html">Mes Certifications</a> </li>
+      <li> <a id = "haut de page" class = "sur_cette_page" href="Certificattions.html">Mes Certifications</a> </li>
       <li> <a href="Projets.html">Mes Projets</a> </li>
       <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
       <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
@@ -51,7 +51,8 @@
 
 
 <br> <br> <img class = "Limitation2" src = "Illustrations/Illustration PIX.jpg" title = "Illustration de PIX" alt = "Photo d'illustration de PIX"><br>
-
+<br><strong>PIX : </strong>
+<br>
 <br> <a href = "Certifications/Certification PIX Lycee.pdf" target = "_blank"> <strong>Certification PIX (niveau Lycée) : </strong></a>
 <br> J'ai obtenus ma certification PIX au lycée Louis Pergaud à Besançon avec un score de 447. Je l'ai obtenus lors de ma terminale.
 
