--- a/Experience_professionnelles.html
+++ b/Experience_professionnelles.html
@@ -18,7 +18,7 @@
       <li> <a href="Certificattions.html">Mes Certifications</a> </li>
       <li> <a href="Projets.html">Mes Projets</a> </li>
       <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
-      <li> <a id = "haut de page" href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
+      <li> <a id = "haut de page" class = "sur_cette_page" href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
       <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
     </ul>
   </nav>
