--- a/Portefolio.html
+++ b/Portefolio.html
@@ -12,7 +12,7 @@
 <header>
   <nav>
     <ul>
-      <li> <a id = "haut de page" href="Portefolio.html">Mon Portefolio</a> </li>
+      <li> <a id = "haut de page" class = "sur_cette_page" href="Portefolio.html">Mon Portefolio</a> </li>
       <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
       <li> <a href="Certificattions.html">Mes Certifications</a> </li>
       <li> <a href="Projets.html">Mes Projets</a> </li>
@@ -30,15 +30,16 @@
 <h2>Présentation personnel :</h2>
 <p>Je m'appelle Marc Bouvot, je suis né le 22 août 2007 et j'habite au 11 Rue d'archamp 25640 à Pouligney. 
 <br> Je suis étudiant au Lycée Louis Pergaud à Besançon, oû je vise à obtenir mon Brevet de Technicien Supérieur Service Informatique aux Organisations.
-<br>Je souhaite prendre le parcours Solutions d'Infrastructure, Système et Réseaux à compter du deuxième semestre.</p>
+<br>J'ai choisis de suivre le parcours Solutions d'Infrastructure, Système et Réseaux à compter du deuxième semestre car celui-ci est en adéquation avec
+<br> mes projets d'avenir et me sera plus utile dans mon quotidiens.</p>
 
 <br>
 
 <h2>Mes passions : </h2>
 
 <p>Je suis passionné par plusieurs activités. J'aime le sport, notamment la course à pied et la musculation. 
-<br>Ces activités sont un loisirs mais je suis égalmment contraint de les pratiqué pour mon parcours professionnel.
-<br>J'aime également la musique, j'en écoute beaucoup. J'affectionne particulièrement le rap américain, le métal et le rock. 
+<br>Ces activités sont un loisirs mais je suis égalemment contraint de les pratiqué pour mon parcours professionnel.
+<br>J'aime aussi la musique, j'en écoute beaucoup. J'affectionne particulièrement le rap américain, le métal et le rock. 
 <br>Voici une liste de mes artistes et albums favoris :
 <ol>
   <li> <a href = "Artistes/A$AP Rocky.jpg" target = "_blank"> <strong>A$AP Rocky</strong></a> : Long Live A$AP</li>
@@ -46,10 +47,10 @@
   <li> <a href = "Artistes/Metro Boomin.jpg" target = "_blank"> <strong>Metro Boomin</strong></a> : Heroes & Villains</li>
   <li> <a href = "Artistes/Mobb Deep.jpg" target = "_blank"> <strong>Mobb Deep</strong></a> : The Infamous</li>
   <li> <a href = "Artistes/Kendrick Lamar.jpg" target = "_blank"> <strong>Kendrick Lamar</strong></a> : GNX</li>
-  <li> <a href = "Artistes/Rammstein.jpeg" target = "_blank"> <strong>Rammstein</strong></a> : GNX</li>
   <li> <a href = "Artistes/Playboi Carti.jpg" target = "_blank"> <strong>Playboi Carti</strong></a> : In Abundance</li>
-  <li> <a href = "Artistes/Denzel Curry.jpg" target = "_blank"> <strong>Denzel Curry</strong></a> : In Abundance</li>
+  <li> <a href = "Artistes/Denzel Curry.jpg" target = "_blank"> <strong>Denzel Curry</strong></a> : Zuu</li>
   <li> <a href = "Artistes/Nas.jpg" target = "_blank"> <strong>Nas</strong></a> : King's Disease II</li>
+  <li> <a href = "Artistes/Rammstein.jpeg" target = "_blank"> <strong>Rammstein</strong></a> : Zeit</li>
   <li> <a href = "Artistes/Eminem.jpg" target = "_blank"> <strong>Eminem</strong></a> : Kamikaze</li>
   <li> <a href = "Artistes/21 Savage.jpg" target = "_blank"> <strong>21 Savage</strong></a> : Without Warning</li>
   <li> <a href = "Artistes/Futur.jpg" target = "_blank"> <strong>Futur</strong></a> : We don't trust you (Red Smoke)</li>
