--- a/Veille_technologique.html
+++ b/Veille_technologique.html
@@ -17,7 +17,7 @@
       <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
       <li> <a href="Certificattions.html">Mes Certifications</a> </li>
       <li> <a href="Projets.html">Mes Projets</a> </li>
-      <li> <a id = "haut de page" href="Veille_technologique.html">Ma Veille Technologique</a> </li>
+      <li> <a id = "haut de page" class = "sur_cette_page" href="Veille_technologique.html">Ma Veille Technologique</a> </li>
       <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
       <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
     </ul>
@@ -25,7 +25,7 @@
 </header>
 
 <h1>Veille Technologique</h1>
-
+<p>Qu'est ce que la veille technologique ??? </p>
 <a class = "retour" href = "#haut de page">Retourner en haut de la page</a>
 
 </body>
