--- a/Projets.html
+++ b/Projets.html
@@ -16,7 +16,7 @@
       <li> <a href="Portefolio.html">Mon Portefolio</a> </li>
       <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
       <li> <a href="Certificattions.html">Mes Certifications</a> </li>
-      <li> <a id = "haut de page" href="Projets.html">Mes Projets</a> </li>
+      <li> <a id = "haut de page" class = "sur_cette_page" href="Projets.html">Mes Projets</a> </li>
       <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
       <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
       <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
