Je sais même plus ce que j'ai fait depuis le dernier commit (sûrment que de la petite bricole...)

--- a/CV.html
+++ b/CV.html
@@ -30,19 +30,19 @@
 
 <h2 class = "Limitation1">Informations personnelles :</h2>
 <p>
-<br>Bouvot Marc
-<br>Né le 22 août 2007
-<br>Homme
-<br>11 Rue d'archamp
-<br>25640 Pouligney
-<br>marc.bouvot@gmail.com
-<br>07 66 17 89 57
-<br>Permis A1, B
+<br>👉Bouvot Marc
+<br>🍰Né le 22 août 2007
+<br>♂️ Homme
+<br>🏡 11 Rue d'archamp
+<br>🏡 25640 Pouligney
+<br><a href="mailto:marc.bouvot@gmail.com">📨 marc.bouvot@gmail.com</a>
+<br><a href = "tel:0766178957">☎️ 07 66 17 89 57</a>
+<br>🏍️ Permis A1, B  🚗
 </p>
 
 <br>
 
-<h2 class = "Limitation1">Profile :</h2>
+<h2 class = "Limitation1">Profil :</h2>
 <p>
 <br>Étudiant passionné par l'informatique, je suis à la recherche d'un stage en informatique pour mettre en pratique mes connaissances en programmation, développement WEB et administration système. Rigoureux et curieux, je souhaite contribuer activement aux projets innovants.
 </p>
@@ -114,9 +114,9 @@
 
 <h2 class = "Limitation1">Centres d'intérêt :</h2>
 <ul>
-  <li>Sport</li>
-  <li>Jeux vidéo</li>
-  <li>Voyages</li>
+  <li>Sport 🏋️‍♂️</li>
+  <li>Jeux vidéo 🎮</li>
+  <li>Voyages ✈️</li>
 </ul>
 
 <br>
