--- a/Veille_technologique.html
+++ b/Veille_technologique.html
@@ -25,7 +25,10 @@
 </header>
 
 <h1>Veille Technologique</h1>
-<p>Qu'est ce que la veille technologique ??? </p>
+<p>En cours de réalisation...</p>
+<br> <img class = "Limitation2" src = "travaux.jpg" title = "Illustration Veille Technologique" alt = "Photo d'illustration de la Veille Technologique" height = "400" width = "500">
+<br> <a href = "Experience_professionnelles.html"><img class = "Limitation2" src = "deviation.jpg" title = "Déviation" alt = "Déviation" height = "400" width = "500"></a>
+<br><br>
 <a class = "retour" href = "#haut de page">Retourner en haut de la page</a>
 
 </body>
