Modification de Certifications (ajout du mooc EBIOS) et changement d'illustration pour le portfolio

--- a/Certificattions.html
+++ b/Certificattions.html
@@ -25,8 +25,15 @@
 
 <h1>Certificats</h1>
 <br>
+<p> <img class = "Limitation2" src = "Illustrations/Illustration EBIOS.jpg" title = "Illustration du MOOC EBIOS" alt = "Photo d'illustration de l'EBIOS" height = "200" width = "300">
 
-<p> <img class = "Limitation2" src = "Illustrations/Illustration ANSSI.jpg" title = "Illustration du MOOC de l'ANSSI'" alt = "Photo d'illustration de l'ANSSI" height = "200" width = "300"><br>
+<br><br>
+<a href = "Certifications/Attestation MOOC EBIOS.pdf" target = "_blank"><strong>MOOC EBIOS : </strong></a>
+<br> Cette année, je me suis certifié au Massive Open Online Course (cours en ligne ouvert et massifs) EBIOS Risk Manager, proposé par l'ANSSI (Agence Nationale de la Sécurité des Systèmes d'Information).
+<br> <br> <br>
+
+
+<img class = "Limitation2" src = "Illustrations/Illustration ANSSI.jpg" title = "Illustration du MOOC de l'ANSSI'" alt = "Photo d'illustration de l'ANSSI" height = "200" width = "300"><br>
 
 <br>
 <a href = "Certifications/Attestation MOOC ANSSI.pdf" target = "_blank"><strong>MOOC de l'ANSSI : </strong></a>
