--- a/Portfolio.html
+++ b/Portfolio.html
@@ -61,7 +61,7 @@
   <li> <a href = "Artistes/AC DC.jpg" target = "_blank"> <strong>AC DC</strong></a> : <a href = "https://www.deezer.com/fr/album/9410086" target = "_blank">Highway to Hell (single)</a></li>
 </ol>
 
-<img class = "Limitation2" src = "Artistes/Eminem2.jpg" title = "Illustration du rap américain" alt = "Photo d'illustration du rap américain" height = "300" width = "500">
+<img class = "Limitation2" src = "Artistes/Rap Américain.jpg" title = "Illustration du rap américain" alt = "Photo d'illustration du rap américain" height = "300" width = "500">
 
 <h3 class = "Limitation1">L'automobile</h3>
 
