Réorganisation et correction de liens dans le portfolio, mise à jour des titres et amélioration de la lisibilité

--- a/Certificattions.html
+++ b/Certificattions.html
@@ -16,8 +16,8 @@
       <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
       <li> <a id = "haut de page" class = "sur_cette_page" href="Certificattions.html">Mes Certifications</a> </li>
       <li> <a href="Projets.html">Mes Projets</a> </li>
-      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
       <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
+      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
       <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
     </ul>
   </nav>
@@ -47,12 +47,12 @@
 <br> J'ai participé à l'atelier du Règlement Général sur la Protection des Données et obtenus mon certificat du Massive Open Online Course (cours en ligne ouvert et massifs) de la Commission Nationale de l'Informatique et des Libertés.
 
 <ol>
-  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 1.pdf" target = "_blank">Attestation CNIL Module 1</a></li>
-  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 2.pdf" target = "_blank">Attestation CNIL Module 2</a></li>
-  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 3.pdf" target = "_blank">Attestation CNIL Module 3</a></li>
-  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 4.pdf" target = "_blank">Attestation CNIL Module 4</a></li>
-  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 5.pdf" target = "_blank">Attestation CNIL Module 5</a></li>
-  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 6.pdf" target = "_blank">Attestation CNIL Module 6</a></li>
+  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 1.pdf" target = "_blank">Attestation CNIL Module 1 : Le RGPD et ses notions clés</a></li>
+  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 2.pdf" target = "_blank">Attestation CNIL Module 2 : Les principes de la protection des données</a></li>
+  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 3.pdf" target = "_blank">Attestation CNIL Module 3 : Les responsabilités des acteurs</a></li>
+  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 4.pdf" target = "_blank">Attestation CNIL Module 4 : Le DPO et les outils de la conformité</a></li>
+  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 5.pdf" target = "_blank">Attestation CNIL Module 5 : Les collectivités territoriales</a></li>
+  <li><a href = "Certifications\Attestation MOOC CNIL\BOUVOT Marc SIO1_Attestation CNIL Module 6.pdf" target = "_blank">Attestation CNIL Module 6 : Travail et données personnelles</a></li>
 </ol>
 
 <br> <br>
