--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,22 +12,22 @@
 <header>
   <nav>
     <ul>
-      <li> <a id = "haut de page" class = "sur_cette_page" href="Portfolio.html">Mon Portefolio</a> </li>
+      <li> <a id = "haut de page" class = "sur_cette_page" href="Portfolio.html">Mon Portfolio</a> </li>
       <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
       <li> <a href="Certificattions.html">Mes Certifications</a> </li>
       <li> <a href="Projets.html">Mes Projets</a> </li>
-      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
       <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
+      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>      
       <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
     </ul>
   </nav>
 </header>
 
-<h1>Portefolio</h1>
+<h1>Portfolio</h1>
 
 <br>
 
-<h2>Présentation personnel :</h2>
+<h2>Présentation personnelle :</h2>
 <p>Je m'appelle Marc Bouvot, je suis né le 22 août 2007 et j'habite au 11 Rue d'archamp 25640 à Pouligney. 
 <br> Je suis étudiant au Lycée Louis Pergaud à Besançon, oû je vise à obtenir mon Brevet de Technicien Supérieur Service Informatique aux Organisations.
 <br>J'ai choisis de suivre le parcours Solutions d'Infrastructure, Système et Réseaux à compter du deuxième semestre car celui-ci est en adéquation avec
