--- a/Projets.html
+++ b/Projets.html
@@ -17,8 +17,8 @@
       <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
       <li> <a href="Certificattions.html">Mes Certifications</a> </li>
       <li> <a id = "haut de page" class = "sur_cette_page" href="Projets.html">Mes Projets</a> </li>
-      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
       <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
+      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
       <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
     </ul>
   </nav>
@@ -33,7 +33,7 @@
     <li>Une page sur moi, mes études, mes passions, etc...;</li>
     <li>Une page avec mon Curriculum Vitae;</li>
     <li>Une page avec toutes mes certifications;</li>
-    <li>Une page avec mes projets (celle que vous lisez actuellement);</li>
+    <li>Une page avec mes projets;</li>
     <li>Une page sur ma veille technologique;</li>
     <li>Une page sur mes expériences professionnelles;</li>
     <li>Une page menant à mon compte GitHub.</li>
