--- a/Veille_technologique.html
+++ b/Veille_technologique.html
@@ -17,8 +17,8 @@
       <li> <a href="CV.html">Mon Curriculum Vitae</a> </li>
       <li> <a href="Certificattions.html">Mes Certifications</a> </li>
       <li> <a href="Projets.html">Mes Projets</a> </li>
+            <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
       <li> <a id = "haut de page" class = "sur_cette_page" href="Veille_technologique.html">Ma Veille Technologique</a> </li>
-      <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
       <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
     </ul>
   </nav>
@@ -27,7 +27,7 @@
 <h1>Veille Technologique</h1>
 <p>🚧 En cours de travaux... veuillez suivre la déviation 🚧</p>
 <br> <img class = "Limitation2" src = "travaux.jpg" title = "Illustration Veille Technologique" alt = "Photo d'illustration de la Veille Technologique" height = "400" width = "500">
-<br> <a href = "Experience_professionnelles.html"><img class = "Limitation2" src = "deviation.jpg" title = "Déviation" alt = "Déviation" height = "400" width = "500"></a>
+<br> <a href = "Portfolio.html"><img class = "Limitation2" src = "deviation.jpg" title = "Déviation" alt = "Déviation" height = "400" width = "500"></a>
 <br><br>
 <a class = "retour" href = "#haut de page">Retourner en haut de la page</a>
 
