--- a/CV.html
+++ b/CV.html
@@ -18,8 +18,8 @@
       <li> <a id = "haut de page" class = "sur_cette_page" href="CV.html">Mon Curriculum Vitae</a> </li>
       <li> <a href="Certificattions.html">Mes Certifications</a> </li>
       <li> <a href="Projets.html">Mes Projets</a> </li>
-      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
       <li> <a href="Experience_professionnelles.html">Mes Experiences Professionnelles</a> </li>
+      <li> <a href="Veille_technologique.html">Ma Veille Technologique</a> </li>
       <li> <a href="https://github.com/Bouvot-marc" target = "_blank">Mon GitHub</a> </li>
     </ul>
   </nav>
@@ -28,7 +28,7 @@
 <h1>Curriculum Vitae</h1>
 <img class = "Limitation1" src="photo.jpg" title = "Marc Bouvot" alt="Photo de Marc Bouvot" width="250" height="250">
 
-<h2 class = "Limitation1">Informations personnelles :</h2>
+<h2 class = "Limitation1">Informations personnelles</h2>
 <p>
 <br>👉Bouvot Marc
 <br>🍰Né le 22 août 2007
@@ -43,14 +43,14 @@
 
 <br>
 
-<h2 class = "Limitation1">Profil :</h2>
+<h2 class = "Limitation1">Profil</h2>
 <p>
 <br>Étudiant passionné par l'informatique, je suis à la recherche d'un stage en informatique pour mettre en pratique mes connaissances en programmation, développement WEB et administration système. Rigoureux et curieux, je souhaite contribuer activement aux projets innovants.
 </p>
 
 <br>
 
-<h2 class = "Limitation1">Formation :</h2>
+<h2 class = "Limitation1">Formation</h2>
 <ul>
   <li>2025 - Présent : Brevet de Technicien Supérieur Services Informatiques aux Organisations au Lycée Louis Pergaud, Besançon</li>
   <li>2022 - 2025 : Baccalauréat général mention Bien avec les spécialités Mathématiques et Numérique, Sciences Informatiques au Lycée Louis Pergaud, Besançon</li>
@@ -60,12 +60,12 @@
 
 <br>
 
-<h2 class = "Limitation1">Expériences professionnelles :</h2>
+<h2 class = "Limitation1">Expériences professionnelles</h2>
 <p>
 <br>Je suis sapeur-pompier volontaire dans le Service Départemental d'Incendie et de Secours du Doubs depuis maintenant deux ans. Je suis également correspondant informatique au sein de plusieurs casernes.</p>
 
 <br>
-<h2 class = "Limitation1">Cours :</h2>
+<h2 class = "Limitation1">Cours</h2>
 <ul>
   <li> <strong>Latin :</strong> J'ai suivis des cours de latin depuis ma cinquième jusqu'à ma seconde. J'ai pus découvrir l'histoire Antique et la traduction de langue mort tel que le Latin et le Grec ancien.</li>
   <li> <strong>Atelier astronomie :</strong> Durant toutes mes années de collège, j'ai pus participer a l'atelier astronomie qui avait pour objectif de nous faire découvrir le fonctionnement de l'univers de manière ludique.</li>
@@ -74,22 +74,22 @@
 
 <br>
 
-<h2 class = "Limitation1">Compétences :</h2>
+<h2 class = "Limitation1">Compétences</h2>
 <ul>
   <li>Utilisations de langage de programmation : Python, PHP ●●●○○</li>
-  <li>Utilisations de base de données (SQL, NoSQL) ●●●●○</li>
-  <li>Travail en équipe ●●●●●</li>
+  <li>Utilisations de base de données (SQL, NoSQL) ●●○○○</li>
+  <li>Travail en équipe ●●●●○</li>
 </ul>
 
 <br>
 
-<h2 class = "Limitation1">Qualités :</h2>
+<h2 class = "Limitation1">Qualités</h2>
 <p>
 <br>Je suis une personne rigoureuse, capable de travailler de manière autonome tout en étant un bon communicant au sein d'une équipe. Je sais également gerer mon stress dans des situations d'urgence.</p>
 
 <br>
 
-<h2 class = "Limitation1">Langues :</h2>
+<h2 class = "Limitation1">Langues</h2>
 <ol>
   <li> <strong>Français</strong> : Langue maternelle</li>
   <li> <strong>Anglais </strong> : Niveau intermédiaire (B1)</li>
@@ -98,7 +98,7 @@
 
 <br>
 
-<h2 class = "Limitation1">Activités extra-scolaires :</h2>
+<h2 class = "Limitation1">Activités extra-scolaires</h2>
 <ul>
   <li> <strong>Tuteur à l'AFEV :</strong> <br>Pendant 6 mois, j'ai eu la chance d'être tuteur à l'Association de la Fondation Étudiante pour la Ville. Durant ces 6 mois j'ai accompagner un élève de troisième afin de l'aider à s'integrer au Lycée Louis Pergaud.</li>
   <br>
@@ -107,13 +107,13 @@
 
 <br>
 
-<h2 class = "Limitation1">Stage :</h2>
+<h2 class = "Limitation1">Stage</h2>
 <p>
 <br>Pendant mon stage de découverte en troisième, j'ai découvert le métier de sapeur-pompier professionnel au Centre d'Incendie et de Secours de Besançon Est. J'ai pus participer aux manoeuvres, séances de sport, travaux d'intérêts généraux et tout autre tâche qui incombe un sapeur-pompier.</p>
 
 <br>
 
-<h2 class = "Limitation1">Centres d'intérêt :</h2>
+<h2 class = "Limitation1">Centres d'intérêt</h2>
 <ul>
   <li>Sport 🏋️‍♂️</li>
   <li>Jeux vidéo 🎮</li>
